--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <div class="project project-1">
                 <div class="project-sc">
                     <div class="img">
-                        <img src="img/hielo.png" alt="">
+                        <img src="img/hielo.jpg" alt="hielo img">
                     </div>
                     <a href="https://umair-shxad.github.io/Hielo_Bootstrap/" target="_blank" class="demo">Demo</a>
                     <a href="https://github.com/Umair-Shxad/Hielo_Bootstrap" target="_blank" class="source-code">Source
@@ -300,7 +300,7 @@
             <div class="project project-2">
                 <div class="project-sc">
                     <div class="img">
-                        <img src="img/megacorp.png" alt=" megacorp img">
+                        <img src="img/megacorp.jpg" alt=" megacorp img">
                     </div>
                     <a href="https://umair-shxad.github.io/MegaCorp_Bootstrap/" target="_blank" class="demo">Demo</a>
                     <a href="https://github.com/Umair-Shxad/MegaCorp_Bootstrap" target="_blank"
@@ -316,7 +316,7 @@
             <div class="project project-3">
                 <div class="project-sc">
                     <div class="img">
-                        <img src="img/theory.png" alt="">
+                        <img src="img/theory.jpg" alt="theory img">
                     </div>
                     <a href="https://umair-shxad.github.io/Theory_Flex/" target="_blank" class="demo">Demo</a>
                     <a href="https://github.com/Umair-Shxad/Theory_Flex" target="_blank" class="source-code">Source
@@ -332,7 +332,7 @@
             <div class="project project-4">
                 <div class="project-sc">
                     <div class="img">
-                        <img src="img/projection.png" alt="projection img">
+                        <img src="img/projection.jpg" alt="projection img">
                     </div>
                     <a href="https://umair-shxad.github.io/Projection_Flex/" target="_blank" class="demo">Demo</a>
                     <a href="https://github.com/Umair-Shxad/Projection_Flex" target="_blank" class="source-code">Source
@@ -349,7 +349,7 @@
             <div class="project project-5">
                 <div class="project-sc">
                     <div class="img">
-                        <img src="img/phaseshift.png" alt="phaseshift img">
+                        <img src="img/phaseshift.jpg" alt="phaseshift img">
                     </div>
                     <a href="https://umair-shxad.github.io/PhaseShift_Bootstrap/" target="_blank" class="demo">Demo</a>
                     <a href="https://github.com/Umair-Shxad/PhaseShift_Bootstrap" target="_blank"
@@ -365,7 +365,7 @@
             <div class="project project-6">
                 <div class="project-sc">
                     <div class="img">
-                        <img src="img/lifestyle.png" alt="lifestyle img">
+                        <img src="img/lifestyle.jpg" alt="lifestyle img">
                     </div>
                     <a href="https://umair-shxad.github.io/LifeStyle_PSD-To-HTML/" target="_blank" class="demo">Demo</a>
                     <a href="https://github.com/Umair-Shxad/LifeStyle_PSD-To-HTML" target="_blank"
