--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <div class="project project-4">
                 <div class="project-sc">
                     <div class="img">
-                        <img src="img/projection.png" alt="projection img">
+                        <img src="img/projection.jpg" alt="projection img">
                     </div>
                     <a href="https://umair-shxad.github.io/Projection_Flex/" target="_blank" class="demo">Demo</a>
                     <a href="https://github.com/Umair-Shxad/Projection_Flex" target="_blank" class="source-code">Source
@@ -349,7 +349,7 @@
             <div class="project project-5">
                 <div class="project-sc">
                     <div class="img">
-                        <img src="img/phaseshift.png" alt="phaseshift img">
+                        <img src="img/phaseshift.jpg" alt="phaseshift img">
                     </div>
                     <a href="https://umair-shxad.github.io/PhaseShift_Bootstrap/" target="_blank" class="demo">Demo</a>
                     <a href="https://github.com/Umair-Shxad/PhaseShift_Bootstrap" target="_blank"
