--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             <div class="h-headings">
                 <h1>I'm <span>Available</span> for job</h1>
                 <p>I'm keen to learn new things.Let's began the journey together.</p>
-                <a href="mailto:shehzadkhurram744@gmail.com" class="hire-me">HIRE ME</a>
+                <a href="mailto:umairshehzad588@gmail.com" class="hire-me">HIRE ME</a>
             </div>
         </div>
     </div>
@@ -414,7 +414,7 @@
                 </div>
 
                 <h4>Gmail</h4>
-                <a href="mailto:shehzadkhurram744@gmail.com" target="_blank">Umairshehazad588@gmail.com</a>
+                <a href="mmailto:umairshehzad588@gmail.com" target="_blank">Umairshehazad588@gmail.com</a>
             </div>
 
             <!-- Contact-Card Two -->
@@ -478,7 +478,7 @@
 
     <footer id="footer">
         <div class="social-icons">
-            <a href="" target="_blank"><i class="fa fa-envelope"></i></a>
+            <a href="mailto:umairshehzad588@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
             <a href="https://github.com/Umair-Shxad" target="_blank"><i class="fa fa-github"></i></a>
             <a href="https://www.linkedin.com/in/umair-shxad-7068a2207/" target="_blank"><i
                     class="fa fa-linkedin"></i></a>
