Home page changes

--- a/index.html
+++ b/index.html
@@ -275,13 +275,93 @@
 
     <section id="projects" data-aos="zoom-in">
         <div class="project-headings">
-            <h2>Our Projects</h2>
+            <h2>Projects</h2>
             <p>Responsive website built through HTML5, CSS3 and Bootstrap. Added JavaScript and JQuery to make Projects more functional.</p>
         </div>
 
         <div class="flex-box">
             <!-- Project One -->
             <div class="project project-1">
+                <div class="project-sc">
+                    <div class="img">
+                        <img src="img/yas.jpg" alt="yas img">
+                    </div>
+                    <a href="https://yas.broomstickcreative.com/" target="_blank" class="demo">Demo</a>
+                    <!-- <a href="https://github.com/Umair-Shxad/Hielo_Bootstrap" target="_blank" class="source-code">Source
+                        Code</a> -->
+                </div>
+
+                <div class="description">
+                    <p>Yas is multi-page website that is converted into html. Sass reuseable component are used to develope the desing.</p>
+                </div>
+            </div>
+
+            <!-- Project Two -->
+            <div class="project project-2">
+                <div class="project-sc">
+                    <div class="img">
+                        <img src="img/dcode.jpg" alt="dcode img">
+                    </div>
+                    <a href="https://dcode.com.pk/" target="_blank" class="demo">Demo</a>
+                    <!-- <a href="https://github.com/Umair-Shxad/MegaCorp_Bootstrap" target="_blank"
+                        class="source-code">Source Code</a> -->
+                </div>
+
+                <div class="description">
+                    <p>Dcode is created with bootstrap. Working with animation library like gsap make the webpage intractive.</p>
+                </div>
+            </div>
+
+            <!-- Project Three -->
+            <div class="project project-3">
+                <div class="project-sc">
+                    <div class="img">
+                        <img src="img/buildomena.jpg" alt="buildomena img">
+                    </div>
+                    <a href="https://buildomena.broomstickcreative.com/" target="_blank" class="demo">Demo</a>
+                    <!-- <a href="https://github.com/Umair-Shxad/Theory_Flex" target="_blank" class="source-code">Source
+                        Code</a> -->
+                </div>
+
+                <div class="description">
+                    <p>Buildomena Landing page is built with HTML5 and modren CSS3 flexbox.</p>
+                </div>
+            </div>
+
+            <!-- Project Four -->
+            <div class="project project-4">
+                <div class="project-sc">
+                    <div class="img">
+                        <img src="img/adscc.jpg" alt="adscc img">
+                    </div>
+                    <a href="https://adscc.broomstickcreative.com/" target="_blank" class="demo">Demo</a>
+                    <!-- <a href="https://github.com/Umair-Shxad/Projection_Flex" target="_blank" class="source-code">Source
+                        Code</a> -->
+                </div>
+
+                <div class="description">
+                    <p>Adscc is complete responsive website which is created using Sass components and boostrap grid system.</p>
+                </div>
+            </div>
+
+            <!-- Project Five -->
+            <div class="project project-5">
+                <div class="project-sc">
+                    <div class="img">
+                        <img src="img/burjyaqub.jpg" alt="burjyaqub img">
+                    </div>
+                    <a href="https://burjyaqub.com/" target="_blank" class="demo">Demo</a>
+                    <!-- <a href="https://github.com/Umair-Shxad/PhaseShift_Bootstrap" target="_blank"
+                        class="source-code">Source Code</a> -->
+                </div>
+
+                <div class="description">
+                    <p>Burjyaqub is project in which differet type of svg's and videos used.</p>
+                </div>
+            </div>
+
+            <!-- Project Six -->
+            <div class="project project-6">
                 <div class="project-sc">
                     <div class="img">
                         <img src="img/hielo.jpg" alt="hielo img">
@@ -293,87 +373,6 @@
 
                 <div class="description">
                     <p>Converted layout using bootstrap. More functionality added by bootstrap carousel.</p>
-                </div>
-            </div>
-
-            <!-- Project Two -->
-            <div class="project project-2">
-                <div class="project-sc">
-                    <div class="img">
-                        <img src="img/megacorp.jpg" alt=" megacorp img">
-                    </div>
-                    <a href="https://umair-shxad.github.io/MegaCorp_Bootstrap/" target="_blank" class="demo">Demo</a>
-                    <a href="https://github.com/Umair-Shxad/MegaCorp_Bootstrap" target="_blank"
-                        class="source-code">Source Code</a>
-                </div>
-
-                <div class="description">
-                    <p>MegaCorp layout is made easy by bootstrap grid system.</p>
-                </div>
-            </div>
-
-            <!-- Project Three -->
-            <div class="project project-3">
-                <div class="project-sc">
-                    <div class="img">
-                        <img src="img/theory.jpg" alt="theory img">
-                    </div>
-                    <a href="https://umair-shxad.github.io/Theory_Flex/" target="_blank" class="demo">Demo</a>
-                    <a href="https://github.com/Umair-Shxad/Theory_Flex" target="_blank" class="source-code">Source
-                        Code</a>
-                </div>
-
-                <div class="description">
-                    <p>Theory is built with HTML5 and modren CSS3 flexbox.</p>
-                </div>
-            </div>
-
-            <!-- Project Four -->
-            <div class="project project-4">
-                <div class="project-sc">
-                    <div class="img">
-                        <img src="img/projection.jpg" alt="projection img">
-                    </div>
-                    <a href="https://umair-shxad.github.io/Projection_Flex/" target="_blank" class="demo">Demo</a>
-                    <a href="https://github.com/Umair-Shxad/Projection_Flex" target="_blank" class="source-code">Source
-                        Code</a>
-                </div>
-
-                <div class="description">
-                    <p>Projection is created through flex-box.To make it more attractive added custom Navigation with
-                        JQuery and a Preloader.</p>
-                </div>
-            </div>
-
-            <!-- Project Five -->
-            <div class="project project-5">
-                <div class="project-sc">
-                    <div class="img">
-                        <img src="img/phaseshift.jpg" alt="phaseshift img">
-                    </div>
-                    <a href="https://umair-shxad.github.io/PhaseShift_Bootstrap/" target="_blank" class="demo">Demo</a>
-                    <a href="https://github.com/Umair-Shxad/PhaseShift_Bootstrap" target="_blank"
-                        class="source-code">Source Code</a>
-                </div>
-
-                <div class="description">
-                    <p>PhaseShift have some little complexites in it which is done through bootstrap.</p>
-                </div>
-            </div>
-
-            <!-- Project Six -->
-            <div class="project project-6">
-                <div class="project-sc">
-                    <div class="img">
-                        <img src="img/lifestyle.jpg" alt="lifestyle img">
-                    </div>
-                    <a href="https://umair-shxad.github.io/LifeStyle_PSD-To-HTML/" target="_blank" class="demo">Demo</a>
-                    <a href="https://github.com/Umair-Shxad/LifeStyle_PSD-To-HTML" target="_blank"
-                        class="source-code">Source Code</a>
-                </div>
-
-                <div class="description">
-                    <p>Lifestyle design is converted into a fully functional webpage using modren CSS flex-box.</p>
                 </div>
             </div>
 
