--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     <div class="img">
                         <img src="img/yas.jpg" alt="yas img">
                     </div>
-                    <a href="https://yas.broomstickcreative.com/" target="_blank" class="demo">Demo</a>
+                    <a href="https://yasclinicgroup.ae/" target="_blank" class="demo">Demo</a>
                     <!-- <a href="https://github.com/Umair-Shxad/Hielo_Bootstrap" target="_blank" class="source-code">Source
                         Code</a> -->
                 </div>
@@ -334,7 +334,7 @@
                     <div class="img">
                         <img src="img/adscc.jpg" alt="adscc img">
                     </div>
-                    <a href="https://adscc.broomstickcreative.com/" target="_blank" class="demo">Demo</a>
+                    <a href="https://www.adscc.ae/" target="_blank" class="demo">Demo</a>
                     <!-- <a href="https://github.com/Umair-Shxad/Projection_Flex" target="_blank" class="source-code">Source
                         Code</a> -->
                 </div>
